# hft-feature-evaluator

./: .gitignore  CLAUDE.md  CODEBASE.md  EVALUATION_REPORT.md  MBO_EVALUATION_REPORT.md  README.md  pyproject.toml
configs/: mbo_98feat_lean.yaml  mbo_98feat_point_return_lean.yaml  offexchange_34feat.yaml  offexchange_34feat_lean.yaml  universality_crsp_point_return.yaml  universality_dkng_point_return.yaml  universality_fang_point_return.yaml  universality_hood_point_return.yaml  universality_ibkr_point_return.yaml  universality_isrg_point_return.yaml  universality_mrna_point_return.yaml  universality_pep_point_return.yaml  universality_snap_point_return.yaml  universality_zm_point_return.yaml
reports/: UNIVERSALITY_STUDY_2026_04.md
scripts/: e15_morning_signal_analysis.py  e16_extreme_event_study.py  feature_oos_analysis.py  offexchange_gate_check.py  pre_training_analysis.py  prepare_mbo_point_return.py  prepare_universality_point_returns.py  ridge_walkforward_mbo.py  ridge_walkforward_mbo_trailing.py  ridge_walkforward_mbo_zscore.py  run_universality_full_pipeline.py  signal_diagnostics.py  signal_diagnostics_mbo.py  universality_ic_gate.py  validate_dcor_path2.py
tests/: conftest.py  test_cache.py  test_concurrent_forward.py  test_config.py  test_criteria.py  test_dcor_screening.py  test_decision.py  test_experiments_offexchange_gate.py  test_fast_gate.py  test_feedback.py  test_holdout.py  test_ic_screening.py  test_jmi_selection.py  test_loader.py  test_pipeline.py  test_profile.py  test_profile_hash.py  test_regime_ic.py  test_registry.py  test_stability.py  (+2 more)
(+33 files in other folders)
